{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 56,
  "lineage": "7e6987f6-e240-d41b-f1a6-804ae7c1f0a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07af684733f156701",
            "arn": "arn:aws:ec2:us-west-2:537540573348:instance/i-0914e8903f1a25334",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0914e8903f1a25334",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "aap-single-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e452ba4146ee58a0"
              }
            ],
            "primary_network_interface_id": "eni-0e452ba4146ee58a0",
            "private_dns": "ip-10-42-10-202.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.10.202",
            "public_dns": "ec2-35-161-160-175.us-west-2.compute.amazonaws.com",
            "public_ip": "35.161.160.175",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c07b10d4a2ac4c44",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd08eac8b5c8ade8",
            "tags": {
              "Name": "aap-single-aap",
              "Role": "aap-all-in-one"
            },
            "tags_all": {
              "Name": "aap-single-aap",
              "Role": "aap-all-in-one"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045fc1ce5016f58a2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537540573348",
            "id": "i-0914e8903f1a25334",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.aap",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:537540573348:internet-gateway/igw-049bc4d8b0260c008",
            "id": "igw-049bc4d8b0260c008",
            "owner_id": "537540573348",
            "region": "us-west-2",
            "tags": {
              "Name": "aap-single-igw"
            },
            "tags_all": {
              "Name": "aap-single-igw"
            },
            "vpc_id": "vpc-06cac8818c1837a7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049bc4d8b0260c008",
            "id": "r-rtb-0aa1fa409fcb09b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0aa1fa409fcb09b71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537540573348",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0aa1fa409fcb09b71"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:537540573348:route-table/rtb-0aa1fa409fcb09b71",
            "id": "rtb-0aa1fa409fcb09b71",
            "owner_id": "537540573348",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049bc4d8b0260c008",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aap-single-public-rt"
            },
            "tags_all": {
              "Name": "aap-single-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cac8818c1837a7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537540573348",
            "id": "rtb-0aa1fa409fcb09b71",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0630274e00d387671",
            "region": "us-west-2",
            "route_table_id": "rtb-0aa1fa409fcb09b71",
            "subnet_id": "subnet-0dd08eac8b5c8ade8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:537540573348:security-group/sg-045fc1ce5016f58a2",
            "description": "AAP all-in-one SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045fc1ce5016f58a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aap-single-sg",
            "name_prefix": "",
            "owner_id": "537540573348",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aap-single-sg"
            },
            "tags_all": {
              "Name": "aap-single-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cac8818c1837a7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537540573348",
            "id": "sg-045fc1ce5016f58a2",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:537540573348:subnet/subnet-0dd08eac8b5c8ade8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd08eac8b5c8ade8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537540573348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "aap-single-public-subnet"
            },
            "tags_all": {
              "Name": "aap-single-public-subnet"
            },
            "vpc_id": "vpc-06cac8818c1837a7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537540573348",
            "id": "subnet-0dd08eac8b5c8ade8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:537540573348:vpc/vpc-06cac8818c1837a7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0a41a155239fe18f7",
            "default_route_table_id": "rtb-0de194ac0359f10e3",
            "default_security_group_id": "sg-03eb9aa028828578f",
            "dhcp_options_id": "dopt-f876a380",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cac8818c1837a7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de194ac0359f10e3",
            "owner_id": "537540573348",
            "region": "us-west-2",
            "tags": {
              "Name": "aap-single-vpc"
            },
            "tags_all": {
              "Name": "aap-single-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}